--- a/package.json
+++ b/package.json
@@ -40,4 +40,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
+},
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
 }
